crates/vaab-syntax/tests/snapshots/parse__a_choice_with_and_without_payloads.snap
---
source: crates/vaab-syntax/tests/parse.rs
expression: "tree(r#\"\nchoice AccountError {\n    InvalidAmount(amount: Int)\n    Frozen\n}\n\"#)"
---
module
  choice AccountError
    variant InvalidAmount
      field amount
        type Int
    variant Frozen
