crates/vaab-syntax/tests/snapshots/parse__a_function_with_no_result_returns_nothing.snap
---
source: crates/vaab-syntax/tests/parse.rs
expression: "tree(\"to announce(message: Text) {\\n    print(message)\\n}\\n\")"
---
module
  to announce
    parameter message
      type Text
    block
      call
        callee
          name print
        argument
          name message
