crates/vaab-syntax/tests/snapshots/parse__a_hole_can_hold_a_whole_expression.snap
---
source: crates/vaab-syntax/tests/parse.rs
expression: "tree(r#\"print(\"Ada is {ages.get(\"Ada\") otherwise 0}\")\"#)"
---
module
  call
    callee
      name print
    argument
      text
        literal "Ada is "
        hole
          otherwise
            value
              call
                callee
                  member .get
                    name ages
                argument
                  text
                    literal "Ada"
            fallback
              int 0
