crates/vaab-syntax/tests/snapshots/parse__a_line_continues_after_an_operator.snap
---
source: crates/vaab-syntax/tests/parse.rs
expression: "tree(\"let total = 1 +\\n    2 +\\n    3\\n\")"
---
module
  let total
    binary +
      binary +
        int 1
        int 2
      int 3
