crates/vaab-syntax/tests/snapshots/parse__a_literal_brace_is_escaped.snap
---
source: crates/vaab-syntax/tests/parse.rs
expression: "tree(r#\"print(\"a \\{ brace, and a } brace\")\"#)"
---
module
  call
    callee
      name print
    argument
      text
        literal "a { brace, and a } brace"
