crates/vaab-syntax/tests/snapshots/parse__a_pure_function.snap
---
source: crates/vaab-syntax/tests/parse.rs
expression: "tree(\"pure to square(n: Int) returns Int = n * n\\n\")"
---
module
  pure to square
    parameter n
      type Int
    returns
      type Int
    body
      binary *
        name n
        name n
